{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 71,
  "lineage": "5458711f-9e66-6e12-47ba-651db782068c",
  "resources": [
    {
      "module": "module.autoscale",
      "mode": "managed",
      "type": "aws_alb",
      "name": "mainALB",
      "provider": "module.autoscale.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:853219876644:loadbalancer/app/dev-webServer-alb/b867c8efd84d1818",
            "arn_suffix": "app/dev-webServer-alb/b867c8efd84d1818",
            "dns_name": "dev-webServer-alb-2039285810.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:853219876644:loadbalancer/app/dev-webServer-alb/b867c8efd84d1818",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-webServer-alb",
            "security_groups": [
              "sg-0ce1197afa6219903"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ab0531301e49efcb"
              },
              {
                "subnet_id": "subnet-0be68b7bee5d9e008"
              }
            ],
            "subnets": [
              "subnet-0ab0531301e49efcb",
              "subnet-0be68b7bee5d9e008"
            ],
            "tags": {
              "Name": "dev_webServer_alb"
            },
            "vpc_id": "vpc-0fd0d057dad9b75e4",
            "zone_id": "Z1H1FL5HABSF5"
          }
        }
      ]
    },
    {
      "module": "module.autoscale",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "frontendHttp",
      "each": "list",
      "provider": "module.autoscale.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:853219876644:listener/app/dev-webServer-alb/b867c8efd84d1818/b044e4648c471697",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:853219876644:targetgroup/dev-webServer-tg-0/8af13e47c06f7d7f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:853219876644:listener/app/dev-webServer-alb/b867c8efd84d1818/b044e4648c471697",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:853219876644:loadbalancer/app/dev-webServer-alb/b867c8efd84d1818",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.mainALB",
            "aws_alb_target_group.webServertg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:853219876644:listener/app/dev-webServer-alb/b867c8efd84d1818/0b738723f0c65389",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:853219876644:targetgroup/dev-webServer-tg-1/8b7de550b6a25f4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:853219876644:listener/app/dev-webServer-alb/b867c8efd84d1818/0b738723f0c65389",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:853219876644:loadbalancer/app/dev-webServer-alb/b867c8efd84d1818",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.mainALB",
            "aws_alb_target_group.webServertg"
          ]
        }
      ]
    },
    {
      "module": "module.autoscale",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "webServertg",
      "each": "list",
      "provider": "module.autoscale.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:853219876644:targetgroup/dev-webServer-tg-0/8af13e47c06f7d7f",
            "arn_suffix": "targetgroup/dev-webServer-tg-0/8af13e47c06f7d7f",
            "deregistration_delay": 180,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:853219876644:targetgroup/dev-webServer-tg-0/8af13e47c06f7d7f",
            "lambda_multi_value_headers_enabled": false,
            "name": "dev-webServer-tg-0",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-webServertg-1"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0fd0d057dad9b75e4"
          },
          "depends_on": [
            "aws_alb.mainALB"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:853219876644:targetgroup/dev-webServer-tg-1/8b7de550b6a25f4a",
            "arn_suffix": "targetgroup/dev-webServer-tg-1/8b7de550b6a25f4a",
            "deregistration_delay": 180,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:853219876644:targetgroup/dev-webServer-tg-1/8b7de550b6a25f4a",
            "lambda_multi_value_headers_enabled": false,
            "name": "dev-webServer-tg-1",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-webServertg-2"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0fd0d057dad9b75e4"
          },
          "depends_on": [
            "aws_alb.mainALB"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internetGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0db7add514b60489b",
            "owner_id": "853219876644",
            "vpc_id": "vpc-0fd0d057dad9b75e4"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "routeTableAsc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ece8e2cd11a5806",
            "original_route_table_id": "rtb-0bbde37f61948c104",
            "route_table_id": "rtb-0f703045b5254c97e",
            "vpc_id": "vpc-0fd0d057dad9b75e4"
          },
          "depends_on": [
            "aws_route_table.routeTable",
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routeTable",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f703045b5254c97e",
            "owner_id": "853219876644",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db7add514b60489b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0fd0d057dad9b75e4"
          },
          "depends_on": [
            "aws_internet_gateway.internetGW",
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgAlb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:853219876644:security-group/sg-0ce1197afa6219903",
            "description": "Security group for ALBs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce1197afa6219903",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-alb-sg",
            "name_prefix": null,
            "owner_id": "853219876644",
            "revoke_rules_on_delete": false,
            "tags": {
              "key": "Name",
              "value": "dev-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd0d057dad9b75e4"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgECS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:853219876644:security-group/sg-055cef3682cd28c4f",
            "description": "Security group for ECS Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055cef3682cd28c4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0ce1197afa6219903"
                ],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "dev-ecs-sg",
            "name_prefix": null,
            "owner_id": "853219876644",
            "revoke_rules_on_delete": false,
            "tags": {
              "key": "Name",
              "value": "dev-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd0d057dad9b75e4"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_from_peers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-294653569",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-055cef3682cd28c4f",
            "self": false,
            "source_security_group_id": "sg-055cef3682cd28c4f",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.sgECS"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inboundAllSSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3206600919",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-055cef3682cd28c4f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.sgECS"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inboundECS-ALB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3446274194",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-055cef3682cd28c4f",
            "self": false,
            "source_security_group_id": "sg-0ce1197afa6219903",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.sgAlb",
            "aws_security_group.sgECS"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outboundAllECS",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1709733831",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-055cef3682cd28c4f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.sgECS"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:853219876644:subnet/subnet-0ab0531301e49efcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ab0531301e49efcb",
            "map_public_ip_on_launch": true,
            "owner_id": "853219876644",
            "tags": {
              "key": "Name",
              "value": "dev-webServer-subnet"
            },
            "vpc_id": "vpc-0fd0d057dad9b75e4"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:853219876644:subnet/subnet-0be68b7bee5d9e008",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0be68b7bee5d9e008",
            "map_public_ip_on_launch": true,
            "owner_id": "853219876644",
            "tags": {
              "key": "Name",
              "value": "dev-webServer-subnet"
            },
            "vpc_id": "vpc-0fd0d057dad9b75e4"
          },
          "depends_on": [
            "aws_vpc.mainVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:853219876644:vpc/vpc-0fd0d057dad9b75e4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0045d5c7345d478f1",
            "default_route_table_id": "rtb-0f703045b5254c97e",
            "default_security_group_id": "sg-0b23701bb2b34392c",
            "dhcp_options_id": "dopt-0b9288a29a0d6cdac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fd0d057dad9b75e4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f703045b5254c97e",
            "owner_id": "853219876644",
            "tags": {
              "key": "Name",
              "value": "dev-vpc-webServer-ECS"
            }
          }
        }
      ]
    }
  ]
}